# enumeraties

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic_usage.rs  enum_props_combo.rs  generics.rs  with_variant_data.rs
src/: benchs.rs  lib.rs  test_static.rs
