[package]
name = "enumeraties"
description = "Static properties on enum variants"
version = "0.0.0"
authors = ["Cryptjar <cryptjar@junk.studio>"]
license = "Apache-2.0"
edition = "2021"

repository = "https://github.com/cryptjar/enumeraties"
keywords = ["enum", "macro", "static", "const", "lazy"]
categories = ["no-std", "rust-patterns"]


[features]
default = []
# Enables benchmarks, but requires nightly Rust, only for development use
bench = []


[dependencies]
lazy_static = "1.4"


[dev-dependencies]
enum_properties = "0.3.0"
enum-map = "0.6"
